@@ -908,11 +908,15 @@ sub _compose_header {
     my $note = '# Note: this file has been initially generated by ' . __PACKAGE__ . " $VERSION";
     my $pragmas = "use strict;\nuse warnings;\n";
 
-    if (defined $self->{make_code}{begin}) {
-        $self->_do_verbose(LEADCHAR."Removing ExtUtils::MakeMaker as dependency\n");
+    # Way too many warnings without
+    no warnings 'uninitialized';
 
+    if (defined $self->{make_code}{begin} || defined $self->{make_code}{end}) {
+        # Removing ExtUtils::MakeMaker dependency
+        $self->_do_verbose(LEADCHAR."Removing ExtUtils::MakeMaker as dependency\n");
         $self->{make_code}{begin} =~ s/[ \t]*(?:use|require)\s+ExtUtils::MakeMaker\s*;//;
 
+        # Mapping (prompt|Verbose) calls to Module::Build ones
         if ($self->{make_code}{begin} =~ /(?:prompt|Verbose)\s*\(/s) {
             my $regexp = qr/^(.*?=\s*)(prompt|Verbose)\s*?\(['"](.*)['"]\);$/;
 
@@ -923,23 +927,46 @@ sub _compose_header {
                 }
             }
         }
+
+        # Removing Module::Build::Compat Note
         if ($self->{make_code}{begin} =~ /Module::Build::Compat/) {
             $self->_do_verbose(LEADCHAR."Removing Module::Build::Compat Note\n");
             $self->{make_code}{begin} =~ s/^\#.*Module::Build::Compat.*?\n//s;
         }
-        # Removing pragmas quietly here to ensure that they'll be inserted after
-        # an eventually appearing version requirement.
+
+        # Removing customized MakeMaker subs
+        my $has_MM_sub    = qr/sub MY::/;
+        my $MM_sub_prefix = 'MY::';
+
+        foreach my $var (qw(begin end)) {
+            if ($self->{make_code}{$var} =~ $has_MM_sub) {
+                foreach my $sub (_extract_sub($self->{make_code}{$var}, $MM_sub_prefix)) {
+                    my $quoted_sub = quotemeta $sub;
+                    my ($subname)  = $sub =~ /sub.*?\s+(.*?)\s*\{/;
+
+                    $self->{make_code}{$var} =~ s/$quoted_sub\n//;
+                    $self->_do_verbose(LEADCHAR."Removing sub: '$subname'\n");
+                }
+            }
+        }
+
+        # Removing strict & warnings pragmas quietly here to ensure that they'll
+        # be inserted after an eventually appearing version requirement.
         $self->{make_code}{begin} =~ s/[ \t]*use\s+(?:strict|warnings)\s*;//g;
+
+        # Saving the shebang (interpreter) line
         while ($self->{make_code}{begin} =~ s/^(\#\!?.*?\n)//) {
             $comments_header .= $1;
         }
         chomp $comments_header;
 
+        # Grabbing use & require statements
         while ($self->{make_code}{begin} =~ /^(?:use|require)\s+(?:[a-z]|[\d\.\_])+?\s*;/m) {
             $self->{make_code}{begin} =~ s/^\n*(.*?;)//s;
             $code_header .= "$1\n";
         }
 
+        # Adding strict & warnings pragmas
         $self->_do_verbose(LEADCHAR."Adding use strict & use warnings pragmas\n");
 
         if ($code_header =~ /(?:use|require)\s+\d\.[\d_]*\s*;/) { 
@@ -949,15 +976,46 @@ sub _compose_header {
         }
         chomp $code_header;
 
+        # Removing leading & trailing newlines
         1 while $self->{make_code}{begin} =~ s/^\n//;
         chomp $self->{make_code}{begin} while $self->{make_code}{begin} =~ /\n$/s;
-    } 
+    }
 
+    # Constructing the Build.PL header
     $self->{Data}{begin} = $comments_header || $code_header
       ? ($comments_header  =~ /\w/ ? "$comments_header\n" : '') . "$note\n" .
         ($code_header =~ /\w/ ? "\n$code_header\n\n" : "\n") .
         $self->{Data}{begin}
       : "$note\n\n" . $self->{Data}{begin};
+}
+
+# Albeit Text::Balanced exists, extract_tagged() and friends
+# were (or I?) unable to extract subs.
+sub _extract_sub {
+    my ($text, $pattern) = @_;
+
+    my ($quoted_pattern, %seen, @sub, @subs);
+
+    $quoted_pattern = quotemeta $pattern;
+
+    foreach my $line (split /\n/, $text) {
+        if ($line =~ /^sub $quoted_pattern\w+\s+\{/) { $seen{begin} = 1 }
+        if ($seen{begin} && $line =~ /^\s*}/       ) { $seen{end}   = 1 }
+
+        if ($seen{begin} || $seen{end}) {
+            push @sub, $line;
+        } else {
+            next;
+        }
+
+        if ($seen{end}) {
+            push @subs, join "\n", @sub;
+            @sub = ();
+            @seen{qw(begin end)} = (0,0);
+        }
+    }
+
+    return @subs;
 }
 
 sub _write_begin {
