@@ -2,6 +2,8 @@ Revision history for Perl extension Module::Build::Convert.
 
 0.47_06
 
+ - MakeMaker's MY:: subs are now being removed.
+
  - Included the documentation of the -c switch in make2build.
 
 0.47_05 Sun Feb 18 02:37:05 CET 2007
